codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__team_roster_tree_above_transcript_layout.snap
---
source: tui/src/chatwidget/tests/team_ui.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"› ├─ team-lead · Enter to view                                                  "
"  ├─ @alice                                                                     "
"  └─ hide                                                                       "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
